force-app/main/default/objects/Apttus_Config2__DataValidationRule__c/Apttus_Config2__DataValidationRule__c.object-meta.xml
<CustomObject>
    <description>Represents a single data validation rule in a validation/enrichment ruleset</description>
    <label>Data Validation Rule</label>
    <nameField>
        <displayFormat>VR-{00000000}</displayFormat>
        <label>Rule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Validation Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>