force-app/main/default/objects/Apttus_Config2__DataValidationRule__c/fields/Apttus_Config2__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Description__c</fullName>
    <description>The description for the rule</description>
    <inlineHelpText>The description for the rule</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>