force-app/main/default/objects/Apttus_Config2__DataValidationRule__c/fields/Apttus_Config2__MatchOperator__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MatchOperator__c</fullName>
    <description>The operator used to match the value in the target object field against the value in the source object field</description>
    <inlineHelpText>The operator used to match the value in the target object field against the value in the source object field</inlineHelpText>
    <label>Match Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>equal to</fullName>
            </value>
            <value>
                <fullName>not equal to</fullName>
            </value>
            <value>
                <fullName>less than</fullName>
            </value>
            <value>
                <fullName>less than or equal to</fullName>
            </value>
            <value>
                <fullName>greater than</fullName>
            </value>
            <value>
                <fullName>greater than or equal to</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>