force-app/main/default/objects/Apttus_Config2__DataValidationRule__c/fields/Apttus_Config2__Message__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Message__c</fullName>
    <description>The message that will be displayed to user in case of error or warning</description>
    <inlineHelpText>The message that will be displayed to user in case of error or warning</inlineHelpText>
    <label>Message</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>