force-app/main/default/objects/Apttus_Config2__DataValidationRule__c/fields/Apttus_Config2__SourceObjectField__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SourceObjectField__c</fullName>
    <description>API name of the source object field against which the target object field will be validated</description>
    <inlineHelpText>API name of the source object field against which the target object field will be validated</inlineHelpText>
    <label>Source Object Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>